--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
+# Dependencies
+node_modules/
+npm-debug.log*
+.npm
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
 logs/
+*.log
+
+# Data files
 data/*.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+.windows/
