--- a/oracle-dd/docker-compose.yml
+++ b/oracle-dd/docker-compose.yml
@@ -2,52 +2,101 @@ version: "3.8"
 
 services:
 
-  # Container do Oracle XE
+  #############################################################
+  # ORACLE XE DATABASE
+  #############################################################
   oracle-xe:
     image: gvenzl/oracle-xe:21-slim
     container_name: oracle-xe
-    hostname: oracle-xe
-
-    ports:
-      - "1521:1521"
-
-    environment:
-      # senha do SYS, SYSTEM e PDBADMIN
-      ORACLE_PASSWORD: datadog
-
-    volumes:
-      # scripts executados automaticamente na primeira inicialização
-      - ./oracle/init:/container-entrypoint-initdb.d
 
     restart: unless-stopped
 
-
-  # Container do Datadog Agent
-  datadog-agent:
-    image: gcr.io/datadoghq/agent:latest
-    container_name: datadog-agent
+    ports:
+      - "${ORACLE_PORT}:1521"
 
     environment:
-      # coloque sua API KEY do Datadog aqui
-      DD_API_KEY: SUA_API_KEY_AQUI
+      # Senha do SYS/SYSTEM
+      ORACLE_PASSWORD: ${ORACLE_PASSWORD}
 
-      # habilita coleta de métricas
-      DD_SITE: datadoghq.com
-
-      # habilita DB Monitoring
-      DD_DATABASE_MONITORING_ENABLED: "true"
+      # Service Name padrão
+      ORACLE_DATABASE: ${ORACLE_SERVICE}
 
     volumes:
-      # arquivo principal de configuração
-      - ./datadog/datadog.yaml:/etc/datadog-agent/datadog.yaml
+      # Scripts executados automaticamente na primeira inicialização
+      - ./oracle/init:/container-entrypoint-initdb.d
 
-      # configuração da integração Oracle
-      - ./datadog/conf.d:/etc/datadog-agent/conf.d
+    networks:
+      - datadog-net
 
-      # acesso ao docker host (necessário em alguns casos)
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+
+  #############################################################
+  # DATADOG AGENT
+  #############################################################
+  datadog-agent:
+    image: datadog/agent:latest
+    container_name: datadog-agent
+
+    restart: unless-stopped
 
     depends_on:
       - oracle-xe
 
-    restart: unless-stopped
+    environment:
+      #########################################################
+      # CONFIGURAÇÃO DATADOG
+      #########################################################
+
+      DD_API_KEY: ${DATADOG_API_KEY}
+      DD_SITE: ${DATADOG_SITE}
+
+      # Habilita Database Monitoring
+      DD_DATABASE_MONITORING_ENABLED: "true"
+
+      # Tags globais
+      DD_ENV: ${ENVIRONMENT}
+      DD_TAGS: "project:${PROJECT}"
+
+      #########################################################
+      # CONFIGURAÇÃO ORACLE
+      #########################################################
+
+      ORACLE_HOST: ${ORACLE_HOST}
+      ORACLE_PORT: ${ORACLE_PORT}
+      ORACLE_SERVICE: ${ORACLE_SERVICE}
+      ORACLE_USER: ${ORACLE_USER}
+      ORACLE_PASSWORD: ${ORACLE_PASSWORD}
+
+    volumes:
+
+      #########################################################
+      # Configuração principal do Agent
+      #########################################################
+      - ./datadog/datadog.yaml:/etc/datadog-agent/datadog.yaml
+
+      #########################################################
+      # Configuração da integração Oracle
+      #########################################################
+      - ./datadog/conf.d/oracle.d/conf.yaml:/etc/datadog-agent/conf.d/oracle.d/conf.yaml
+
+      #########################################################
+      # Docker socket (necessário para container monitoring)
+      #########################################################
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+
+      #########################################################
+      # Proc filesystem (melhor coleta de métricas)
+      #########################################################
+      - /proc:/host/proc:ro
+      - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+
+    networks:
+      - datadog-net
+
+
+#############################################################
+# NETWORK
+#############################################################
+networks:
+  datadog-net:
+    driver: bridge
+
