--- a/mysql-dd/.env
+++ b/mysql-dd/.env
@@ -1,2 +1,10 @@
 DATADOG_API_KEY=sua_chave_de_api_aqui
 DATADOG_SITE=datadoghq.com
+
+MYSQL_DATABASE=datadog
+MYSQL_ROOT_PASSWORD=root
+
+DD_ENV=lab
+DD_SERVICE=mysql-db
+DD_VERSION=1.0
+
